--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
+    "@vitejs/plugin-react": "^1.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^6.0.0-0",
@@ -20,9 +21,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "dev": "vite",
+    "build": "vite build",
     "test": "react-scripts test",
+    "preview": "vite preview",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -45,5 +47,9 @@
   },
   "resolutions": {
     "styled-components": "^5"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "vite": "^2.9.8"
   }
 }
