--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "@vitejs/plugin-react": "^1.3.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-loader-spinner": "^6.0.0-0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-is": "^16.13.1",
+    "react-redux": "^8.0.1",
     "react-scripts": "5.0.0",
-    "react-spinners": "^0.11.0",
-    "styled-components": "^5.3.3",
+    "styled-components": "^5.3.5",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
